--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:server": "json-server server.json -p 3333 -w -d 500",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint src --ext .ts,.tsx"
+   
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.0",
@@ -24,6 +26,7 @@
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.0.1",
     "eslint": "^8.23.0",
+    "json-server": "^0.17.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
   }
